<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingInActivity">

    <ImageView
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_width="150dp"
        android:layout_height="150dp"/>
    
    <EditText
        android:id="@+id/emailEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/repeatPasswordEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/nameEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/loginSingUpButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/singup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/toggleLoginSingUpTextView"
        android:text="@string/tapLogIn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:clickable="true"
        android:onClick="toggleLoginMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>